ADD_SUBDIRECTORY(IceBidir)
ADD_SUBDIRECTORY(IceBoxBidir)
ADD_SUBDIRECTORY(IceBoxTestClient)
ADD_SUBDIRECTORY(IceBoxTestTrainerClient)
IF (BUILD_WITH_BOW)
  ADD_SUBDIRECTORY(IceBoxTestClient_BowTest)
  ADD_SUBDIRECTORY(IceBoxTestClient_BowTrain)
ENDIF (BUILD_WITH_BOW)

IF (BUILD_WITH_SBD)
  ADD_SUBDIRECTORY(IceBoxTestClient_SBDTrain)
  ADD_SUBDIRECTORY(IceBoxTestClient_SBDTest)
ENDIF (BUILD_WITH_SBD)

IF (BUILD_WITH_VIDEOVALIDATORFOROPENCV)
  ADD_SUBDIRECTORY(IceBoxTestClient_VideoValidatorForOpenCV)
ENDIF (BUILD_WITH_VIDEOVALIDATORFOROPENCV)

IF (BUILD_UNIT_TESTS)
  FIND_PACKAGE(UnitTest++ REQUIRED)
  ADD_SUBDIRECTORY(UnitTests)
ENDIF (BUILD_UNIT_TESTS)
